--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="slideshowContainer">
             <div class="slideshow">
                 <div class="slideOne">
-                    <img src="/resources/trumpPoop" alt="Trump as a cartoon faeces with tentacles">
+                    <img src="/resources/trumppoop.jpeg" alt="Trump as a cartoon faeces with tentacles">
                     <div class="text">
                         <h2 class="bt"> We Are LT3D </h2>
                         <p class="bt"> We do it, you buy it. The cycle.</p>
