--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <div class="slideshowContainer">
             <div class="slideshow">
-                <div class="slideOne">
+                <div class="slides">
                     <img src="/resources/trumppoop.jpeg" alt="Trump as a cartoon faeces with tentacles">
                     <div class="text">
                         <h2 class="bt"> We Are LT3D </h2>
