--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LT3D - Landing</title>
     <link rel="icon" href="/resources/LT3D.svg" type="image/x-icon">
-    
+
+    <link rel="stylesheet" href="css/slideshow.css">
     <link rel="stylesheet" href="css/marquee.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/slideshowMain.js"></script>
