--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>LT3D - Landing</title>
     <link rel="icon" href="/resources/LT3D.svg" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/slideshow.css">
     <link rel="stylesheet" href="css/marquee.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/slideshowMain.js"></script>
     <script src="js/hamburgermenu.js" defer></script>
 </head>
 <body>
@@ -22,25 +20,17 @@
         <img src="resources/LT3D.svg" alt="LT3D" class="center-svg">
     </header>
     <main>
-        <div class="slideshowContainer">
-            <div class="slideshow">
-                <div class="slides">
-                    <img src="resources/trumppoop.jpeg" alt="Trump as a cartoon faeces with tentacles">
-                    <div class="text">
-                        <h2 class="bt"> We Are LT3D </h2>
-                        <p class="bt"> We do it, you buy it. The cycle.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="previousSlide" onclick="changeSlide(-1)">&#10094;</button>
-            <button class="nextSlide" onclick="changeSlide(1)">&#10095;</button>
-        </div>
-        <br>
         <div class="marquee">
             <span style="font-size: 35px;" class="bt">Everything is at least 10% off!</span>
         </div>
         <br>
-        
+        <h1 class="bt">We Are LT3D</h1>
+        <p>We are a group of people who offer services such as 3D printing or digital testing, just to name a few.</p>
+        <br>
+        <h1 class="bt">Why us?</h1>
+        <p>We believe that we are a diverse group with all skills required to run a successful technologic based job.</p>
+        <p>Felix is very good at creating ideas, while Arthur is very good at creating them.</p>
+        <p>I present digital skills, although I can't create, I can do more technological sided things.</p>
     </main>
     <div class="menu" id="menu">
         <a href="../index.html">Landing</a>
