--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
         <h1 class="bt">Why us?</h1>
         <p>We believe that we are a diverse group with all skills required to run a successful technologic based job.</p>
-        <p>Felix is very good at creating ideas, while Arthur is very good at creating them.</p>
+        <p>Felix is very good at creating ideas and is very good at creating them.</p>
         <p>I present digital skills, although I can't create, I can do more technological sided things.</p>
     </main>
     <div class="menu" id="menu">
