--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LT3D - Contact</title>
+    <title>LT3D - Contact Us</title>
     <link rel="icon" href="/resources/LT3D.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="css/marquee.css">
