--- a/legal.html
+++ b/legal.html
@@ -23,11 +23,11 @@
         
     </main>
     <div class="menu" id="menu">
-        <a href="../index.html">Landing</a>
-        <a href="../html/shop.html">Shop</a>
-        <a href="../html/about.html">About Us</a>
-        <a href="../html/contact.html">Contact Us</a>
-        <a href="../html/legal.html">Legal</a>
+                <a href="index.html">Landing</a>
+        <a href="shop.html">Shop</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="legal.html">Legal</a>
     </div>
 </body>
 </html>
