--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         <img src="resources/LT3D.svg" alt="LT3D" class="center-svg">
     </header>
     <main>
-        
+        <div class=marquee>
+            <span>Everything is atleast 10% off! Merry Chri
+            stmas</span>
+        </div>
     </main>
     <div class="menu" id="menu">
-                <a href="index.html">Landing</a>
+        <a href="index.html">Landing</a>
         <a href="shop.html">Shop</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
