--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,10 @@
         <img src="resources/LT3D.svg" alt="LT3D" class="center-svg">
     </header>
     <main>
-        
+        <div class=marquee>
+            <span>Everything is atleast 10% off! Merry Chri
+            stmas</span>
+        </div>
     </main>
     <div class="menu" id="menu">
         <a href="index.html">Landing</a>
