--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </header>
     <main>
         <div class=marquee>
-            <span>Everything is atleast 10% off! Merry Chri
-            stmas</span>
+            <span class="bt" style="font-size: 32px">Everything is atleast 10% off! Merry Christmas</span>
         </div>
     </main>
     <div class="menu" id="menu">
